--- a/analiticsScripts/csv_parser.ipynb
+++ b/analiticsScripts/csv_parser.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 320,
    "outputs": [],
    "source": [
     "import math\n",
     "\n",
     "import pandas as pd\n",
     "from multiprocess import Pool\n",
+    "import numpy as np\n",
     "import os\n",
     "from graph import Graph"
    ],
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 307,
    "outputs": [],
    "source": [
     "def get_salary(x, convert_df):\n",
@@ -115,7 +116,7 @@
     "    data['salary'] = data.apply(lambda x: get_salary(x, convert_df) if x['published_at'] not in ['2005-02-08T11:11:17+0300', '2005-08-15T13:22:01+0400'] else math.nan, axis=1)\n",
     "\n",
     "    data.drop(columns=['salary_from', 'salary_to', 'salary_currency'])\n",
-    "    data = data.reindex(columns=['name', 'salary', 'area_name', 'published_at'], copy=True)\n",
+    "    data = data.reindex(columns=['name', 'salary', 'area_name', 'published_at', 'key_skills'], copy=True)\n",
     "    filtered = data[data['name'].str.lower().str.replace(' ', '').str.contains(filter_copied)]\n",
     "\n",
     "    return ResultYear(data['published_at'].values[0][:4], data.shape[0], math.floor(data['salary'].mean()), filtered.shape[0], math.floor(filtered['salary'].mean()), data, filtered)"
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 308,
    "outputs": [],
    "source": [
     "processes = []\n",
@@ -168,14 +169,6 @@
     "    .groupby('area_name')['name'] \\\n",
     "    .count() \\\n",
     "    .loc[lambda x: x > percent]\n",
-    "\n",
-    "# result.area_count = data_with_salary.loc[data_with_salary.area_name.isin(correct_cities.index)] \\\n",
-    "#     .groupby('area_name')['name'] \\\n",
-    "#     .count() \\\n",
-    "#     .apply(lambda x: round(x / count, 3)) \\\n",
-    "#     .sort_values(ascending=False) \\\n",
-    "#     .head(10) \\\n",
-    "#     .to_dict()\n",
     "\n",
     "result.area_count = (correct_cities.sort_values(ascending=False) / count).to_dict().items()\n",
     "\n",
@@ -298,6 +291,161 @@
     "    list(result.area_count),\n",
     "    list(result.area_sal.items()),\n",
     ")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 352,
+   "outputs": [],
+   "source": [
+    "\n",
+    "def extract_skills(x, key, skill_dict):\n",
+    "    skills = x['key_skills']\n",
+    "\n",
+    "    if not isinstance(skills, str): return\n",
+    "\n",
+    "    for skill in skills.split('\\n'):\n",
+    "        skill_dict[key][skill] = skill_dict[key].get(skill, 0) + 1"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 353,
+   "outputs": [],
+   "source": [
+    "skills_years = {}\n",
+    "\n",
+    "for result_year in data_arr:\n",
+    "    filtered_year = result_year.filtered\n",
+    "    skills_years[result_year.year] = {}\n",
+    "    filtered_year.apply(lambda x: extract_skills(x, result_year.year, skills_years), axis=1)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 356,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2008\n",
+      "2020\n",
+      "('JavaScript', 2231)\n",
+      "('PHP', 1803)\n",
+      "('CSS', 1642)\n",
+      "('HTML', 1641)\n",
+      "('MySQL', 1539)\n",
+      "('jQuery', 1266)\n",
+      "('Git', 1074)\n",
+      "('1С-Битрикс', 805)\n",
+      "('HTML5', 800)\n",
+      "('CSS3', 644)\n",
+      "2021\n",
+      "('JavaScript', 998)\n",
+      "('PHP', 813)\n",
+      "('CSS', 735)\n",
+      "('HTML', 702)\n",
+      "('MySQL', 696)\n",
+      "('jQuery', 501)\n",
+      "('Git', 496)\n",
+      "('1С-Битрикс', 361)\n",
+      "('HTML5', 331)\n",
+      "('CSS3', 292)\n",
+      "2009\n",
+      "2022\n",
+      "('PHP', 283)\n",
+      "('JavaScript', 233)\n",
+      "('MySQL', 209)\n",
+      "('HTML', 190)\n",
+      "('CSS', 177)\n",
+      "('Git', 157)\n",
+      "('jQuery', 127)\n",
+      "('ООП', 101)\n",
+      "('1С-Битрикс', 88)\n",
+      "('HTML5', 87)\n",
+      "2019\n",
+      "('JavaScript', 2271)\n",
+      "('PHP', 2002)\n",
+      "('HTML', 1854)\n",
+      "('CSS', 1756)\n",
+      "('MySQL', 1470)\n",
+      "('jQuery', 1258)\n",
+      "('HTML5', 1037)\n",
+      "('Git', 924)\n",
+      "('1С-Битрикс', 874)\n",
+      "('CSS3', 766)\n",
+      "2018\n",
+      "('PHP', 2437)\n",
+      "('JavaScript', 2411)\n",
+      "('HTML', 2001)\n",
+      "('CSS', 1879)\n",
+      "('MySQL', 1784)\n",
+      "('jQuery', 1600)\n",
+      "('HTML5', 1410)\n",
+      "('Git', 1067)\n",
+      "('CSS3', 1016)\n",
+      "('1С-Битрикс', 980)\n",
+      "2015\n",
+      "('PHP', 476)\n",
+      "('JavaScript', 463)\n",
+      "('HTML', 385)\n",
+      "('jQuery', 365)\n",
+      "('CSS', 344)\n",
+      "('MySQL', 343)\n",
+      "('HTML5', 315)\n",
+      "('CSS3', 264)\n",
+      "('Ajax', 237)\n",
+      "('PHP5', 169)\n",
+      "2014\n",
+      "2016\n",
+      "('JavaScript', 1316)\n",
+      "('PHP', 1221)\n",
+      "('HTML', 1029)\n",
+      "('jQuery', 930)\n",
+      "('MySQL', 928)\n",
+      "('CSS', 903)\n",
+      "('HTML5', 806)\n",
+      "('CSS3', 687)\n",
+      "('PHP5', 522)\n",
+      "('1С-Битрикс', 502)\n",
+      "2003\n",
+      "2017\n",
+      "('JavaScript', 1999)\n",
+      "('PHP', 1981)\n",
+      "('HTML', 1700)\n",
+      "('CSS', 1627)\n",
+      "('MySQL', 1489)\n",
+      "('jQuery', 1420)\n",
+      "('HTML5', 1171)\n",
+      "('1С-Битрикс', 855)\n",
+      "('CSS3', 824)\n",
+      "('Git', 814)\n",
+      "2013\n",
+      "2007\n",
+      "2006\n",
+      "2012\n",
+      "2004\n",
+      "2010\n",
+      "2011\n",
+      "2005\n"
+     ]
+    }
+   ],
+   "source": [
+    "for year_skill in skills_years:\n",
+    "    print(year_skill)\n",
+    "    for s in list(sorted(skills_years[year_skill].items(), key=lambda x: -x[1]))[:10]:\n",
+    "        print(s)"
    ],
    "metadata": {
     "collapsed": false
