--- a/analiticsScripts/csv_parser.ipynb
+++ b/analiticsScripts/csv_parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import math\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "df = pd.read_csv('csv_files/vacancies_with_skills.csv', encoding='utf-8-sig', low_memory=False)\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def separate_by_years():\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "class Result:\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "def get_salary(x, convert_df):\n",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "processes = []\n",
@@ -135,7 +135,7 @@
     "result = Result()\n",
     "\n",
     "filter_names = ['web develop', 'веб разработчик', 'web разработчик', 'web programmer', 'web программист', 'веб программист', 'битрикс разработчик', 'bitrix разработчик', 'drupal разработчик', 'cms разработчик', 'wordpress разработчик', 'wp разработчик', 'joomla разработчик', 'drupal developer', 'cms developer', 'wordpress developer', 'wp developer', 'joomla developer', 'web developer', 'разработчик web', 'web-программист', 'web-разработчик']\n",
-    "filter_row = '|'.join(filter_names)\n",
+    "filter_row = '|'.join(filter_names).replace(' ', '')\n",
     "files = os.listdir('csv_files/separated')\n",
     "args = map(lambda x: (x, convert.copy(deep=True), filter_row), files)\n",
     "\n",
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "data_with_salary = pd.concat(map(lambda x: x.data, data_arr))\n",
@@ -186,16 +186,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "{'2003': 41304, '2004': 42967, '2005': 44938, '2006': 41317, '2007': 44449, '2008': 48411, '2009': 44811, '2010': 44657, '2011': 46448, '2012': 47969, '2013': 53541, '2014': 49076, '2015': 51734, '2016': 61305, '2017': 60363, '2018': 65581, '2019': 69938, '2020': 72833, '2021': 83061, '2022': 95473}\n",
-      "{'2003': 20086, '2004': 26592, '2005': 30155, '2006': 30825, '2007': 39915, '2008': 41326, '2009': 39359, '2010': 40685, '2011': 43249, '2012': 46498, '2013': 46761, '2014': 48973, '2015': 52025, '2016': 53114, '2017': 58626, '2018': 61267, '2019': 68327, '2020': 74302, '2021': 84711, '2022': 95434}\n",
+      "{'2003': 30318, '2004': 30209, '2005': 32089, '2006': 40923, '2007': 41119, '2008': 41776, '2009': 41269, '2010': 44884, '2011': 44970, '2012': 50454, '2013': 45528, '2014': 51206, '2015': 55777, '2016': 58280, '2017': 63581, '2018': 68357, '2019': 74418, '2020': 79103, '2021': 95131, '2022': 101579}\n",
       "{'2003': 1983, '2004': 7833, '2005': 16022, '2006': 33321, '2007': 53562, '2008': 75070, '2009': 52889, '2010': 93494, '2011': 142458, '2012': 173897, '2013': 234019, '2014': 259571, '2015': 284763, '2016': 332460, '2017': 391464, '2018': 517670, '2019': 535956, '2020': 489472, '2021': 287915, '2022': 91142}\n",
-      "{'2003': 8, '2004': 36, '2005': 101, '2006': 368, '2007': 590, '2008': 873, '2009': 719, '2010': 1206, '2011': 2300, '2012': 2389, '2013': 3135, '2014': 3397, '2015': 4306, '2016': 5550, '2017': 6386, '2018': 6913, '2019': 5701, '2020': 4173, '2021': 1743, '2022': 460}\n"
+      "{'2003': 14, '2004': 63, '2005': 154, '2006': 568, '2007': 871, '2008': 1216, '2009': 1012, '2010': 1678, '2011': 3094, '2012': 3396, '2013': 5025, '2014': 4791, '2015': 5699, '2016': 7606, '2017': 8570, '2018': 9434, '2019': 7992, '2020': 5850, '2021': 2746, '2022': 690}\n"
      ]
     }
    ],
@@ -211,13 +211,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
       "text/plain": "[('Москва', 0.334026018899322),\n ('Санкт-Петербург', 0.10140489688122169),\n ('Минск', 0.04061388562982566),\n ('Киев', 0.032169142232281484),\n ('Новосибирск', 0.023631882611882666),\n ('Нижний Новгород', 0.02144437701366958),\n ('Екатеринбург', 0.019727059964500273),\n ('Алматы', 0.01892116268106615),\n ('Воронеж', 0.018596006194905916),\n ('Казань', 0.01856606725806701)]"
      },
-     "execution_count": 301,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,13 +231,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
       "text/plain": "dict_items([('Минск', 94092), ('Киев', 79895), ('Москва', 78957), ('Санкт-Петербург', 68747), ('Новосибирск', 64771), ('Екатеринбург', 59139), ('Краснодар', 51585), ('Казань', 51309), ('Нижний Новгород', 49914), ('Самара', 49548)])"
      },
-     "execution_count": 299,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "\n",
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "skills_years = {}\n",
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
@@ -340,96 +340,96 @@
      "text": [
       "2008\n",
       "2020\n",
-      "('JavaScript', 2231)\n",
-      "('PHP', 1803)\n",
-      "('CSS', 1642)\n",
-      "('HTML', 1641)\n",
-      "('MySQL', 1539)\n",
-      "('jQuery', 1266)\n",
-      "('Git', 1074)\n",
-      "('1С-Битрикс', 805)\n",
-      "('HTML5', 800)\n",
-      "('CSS3', 644)\n",
+      "('JavaScript', 3146)\n",
+      "('PHP', 2459)\n",
+      "('CSS', 2222)\n",
+      "('HTML', 2162)\n",
+      "('MySQL', 2143)\n",
+      "('jQuery', 1715)\n",
+      "('Git', 1678)\n",
+      "('HTML5', 1195)\n",
+      "('1С-Битрикс', 1048)\n",
+      "('CSS3', 931)\n",
       "2021\n",
-      "('JavaScript', 998)\n",
-      "('PHP', 813)\n",
-      "('CSS', 735)\n",
-      "('HTML', 702)\n",
-      "('MySQL', 696)\n",
-      "('jQuery', 501)\n",
-      "('Git', 496)\n",
-      "('1С-Битрикс', 361)\n",
-      "('HTML5', 331)\n",
-      "('CSS3', 292)\n",
+      "('JavaScript', 1555)\n",
+      "('PHP', 1170)\n",
+      "('CSS', 1076)\n",
+      "('MySQL', 1014)\n",
+      "('HTML', 1006)\n",
+      "('Git', 848)\n",
+      "('jQuery', 760)\n",
+      "('HTML5', 530)\n",
+      "('1С-Битрикс', 480)\n",
+      "('CSS3', 432)\n",
       "2009\n",
       "2022\n",
-      "('PHP', 283)\n",
-      "('JavaScript', 233)\n",
-      "('MySQL', 209)\n",
-      "('HTML', 190)\n",
-      "('CSS', 177)\n",
-      "('Git', 157)\n",
-      "('jQuery', 127)\n",
-      "('ООП', 101)\n",
-      "('1С-Битрикс', 88)\n",
-      "('HTML5', 87)\n",
+      "('PHP', 396)\n",
+      "('JavaScript', 356)\n",
+      "('HTML', 272)\n",
+      "('MySQL', 268)\n",
+      "('CSS', 256)\n",
+      "('Git', 218)\n",
+      "('jQuery', 161)\n",
+      "('ООП', 155)\n",
+      "('HTML5', 125)\n",
+      "('1С-Битрикс', 122)\n",
       "2019\n",
-      "('JavaScript', 2271)\n",
-      "('PHP', 2002)\n",
-      "('HTML', 1854)\n",
-      "('CSS', 1756)\n",
-      "('MySQL', 1470)\n",
-      "('jQuery', 1258)\n",
-      "('HTML5', 1037)\n",
-      "('Git', 924)\n",
-      "('1С-Битрикс', 874)\n",
-      "('CSS3', 766)\n",
+      "('JavaScript', 3333)\n",
+      "('PHP', 2806)\n",
+      "('HTML', 2545)\n",
+      "('CSS', 2453)\n",
+      "('MySQL', 2084)\n",
+      "('jQuery', 1980)\n",
+      "('HTML5', 1564)\n",
+      "('Git', 1530)\n",
+      "('CSS3', 1193)\n",
+      "('1С-Битрикс', 1169)\n",
       "2018\n",
-      "('PHP', 2437)\n",
-      "('JavaScript', 2411)\n",
-      "('HTML', 2001)\n",
-      "('CSS', 1879)\n",
-      "('MySQL', 1784)\n",
-      "('jQuery', 1600)\n",
-      "('HTML5', 1410)\n",
-      "('Git', 1067)\n",
-      "('CSS3', 1016)\n",
-      "('1С-Битрикс', 980)\n",
+      "('JavaScript', 3434)\n",
+      "('PHP', 3192)\n",
+      "('HTML', 2614)\n",
+      "('MySQL', 2494)\n",
+      "('CSS', 2484)\n",
+      "('jQuery', 2162)\n",
+      "('HTML5', 1837)\n",
+      "('Git', 1557)\n",
+      "('CSS3', 1353)\n",
+      "('1С-Битрикс', 1178)\n",
       "2015\n",
-      "('PHP', 476)\n",
-      "('JavaScript', 463)\n",
-      "('HTML', 385)\n",
-      "('jQuery', 365)\n",
-      "('CSS', 344)\n",
-      "('MySQL', 343)\n",
-      "('HTML5', 315)\n",
-      "('CSS3', 264)\n",
-      "('Ajax', 237)\n",
-      "('PHP5', 169)\n",
+      "('JavaScript', 699)\n",
+      "('PHP', 696)\n",
+      "('HTML', 553)\n",
+      "('MySQL', 509)\n",
+      "('CSS', 499)\n",
+      "('HTML5', 479)\n",
+      "('jQuery', 456)\n",
+      "('CSS3', 421)\n",
+      "('Ajax', 377)\n",
+      "('PHP5', 311)\n",
       "2014\n",
       "2016\n",
-      "('JavaScript', 1316)\n",
-      "('PHP', 1221)\n",
-      "('HTML', 1029)\n",
-      "('jQuery', 930)\n",
-      "('MySQL', 928)\n",
-      "('CSS', 903)\n",
-      "('HTML5', 806)\n",
-      "('CSS3', 687)\n",
-      "('PHP5', 522)\n",
-      "('1С-Битрикс', 502)\n",
+      "('JavaScript', 1958)\n",
+      "('PHP', 1737)\n",
+      "('HTML', 1473)\n",
+      "('CSS', 1293)\n",
+      "('jQuery', 1289)\n",
+      "('MySQL', 1289)\n",
+      "('HTML5', 1176)\n",
+      "('CSS3', 1001)\n",
+      "('PHP5', 782)\n",
+      "('Git', 762)\n",
       "2003\n",
       "2017\n",
-      "('JavaScript', 1999)\n",
-      "('PHP', 1981)\n",
-      "('HTML', 1700)\n",
-      "('CSS', 1627)\n",
-      "('MySQL', 1489)\n",
-      "('jQuery', 1420)\n",
-      "('HTML5', 1171)\n",
-      "('1С-Битрикс', 855)\n",
-      "('CSS3', 824)\n",
-      "('Git', 814)\n",
+      "('JavaScript', 2882)\n",
+      "('PHP', 2575)\n",
+      "('HTML', 2143)\n",
+      "('CSS', 2103)\n",
+      "('MySQL', 2014)\n",
+      "('jQuery', 1835)\n",
+      "('HTML5', 1539)\n",
+      "('Git', 1214)\n",
+      "('CSS3', 1111)\n",
+      "('1С-Битрикс', 1045)\n",
       "2013\n",
       "2007\n",
       "2006\n",
